<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/splash_screen_bg"
    tools:context=".presentation.auth.LoginActivity">

    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="177dp"
        android:layout_height="111dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />


    <LinearLayout
        android:id="@+id/qr_fab"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@drawable/bg_connect"
        android:backgroundTint="@color/info_color"
        android:orientation="horizontal" >
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:backgroundTint="@color/red"
        android:elevation="4dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:drawablePadding="8dp"
        android:contentDescription="@string/logout"
        android:clickable="true"
        android:focusable="true"/>

</RelativeLayout>