<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.AccountLoginActivity"

    >

    <RelativeLayout
        android:id="@+id/bgColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_screen_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"

        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"  />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="30dp"
        android:layout_marginBottom="-20dp"
        android:layout_above="@+id/bgColor"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/login_title"
                android:textColor="@color/splash_screen_bg"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/login_sub"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/email_or_username"
                android:textStyle="normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/eusername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edittext_outlined"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="4dp"
                android:enabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_email_or_username"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/Password"
                android:textStyle="normal" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/edittext_outlined"
                    android:drawablePadding="4dp"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/lock"
                    android:paddingEnd="48dp" />

                <ImageView
                    android:id="@+id/eye_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:src="@drawable/eye"
                    android:clickable="true"
                    android:focusable="true"/>
            </RelativeLayout>

            <!-- Remember Me Checkbox -->
            <CheckBox
                android:id="@+id/checkbox_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember Me"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                >
                <TextView
                    android:id="@+id/routeForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/red"
                    android:textStyle="normal" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              >
              <Button
                  android:id="@+id/submit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:backgroundTint="@color/splash_screen_bg"
                  android:paddingVertical="16dp"
                  android:text="@string/login"
                  android:textColor="@android:color/white"
                  android:layout_gravity="fill"
                  android:visibility="visible"
                  android:textAllCaps="false"
                  />
              <ProgressBar
                  android:id="@+id/progressBar"
                  android:layout_width="32dp"
                  android:layout_height="32dp"
                  android:layout_centerInParent="true"
                  android:visibility="gone"
                  android:indeterminate="true"
                  android:indeterminateTint="@color/white"/>
          </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>