<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.auth.ForgotPasswordActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="?attr/actionBarWidgetTheme" >

    </com.google.android.material.appbar.MaterialToolbar>


 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:scrollbars="none"
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
         >

         <View
             android:layout_width="wrap_content"
             android:layout_height="70dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recoverAccount"
             android:textSize="24sp"
             android:textColor="@color/black"
             android:textStyle="bold" />
         <View
             android:layout_width="wrap_content"
             android:layout_height="16dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recoverAccount_sub"
             android:textSize="16sp"
             android:textColor="@color/dark_gray"
             android:textStyle="normal" />
         <View
             android:layout_width="wrap_content"
             android:layout_height="40dp" />


         <EditText
             android:id="@+id/eusername"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@drawable/edittext_outlined"
             android:drawablePadding="4dp"
             android:enabled="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="@string/username_or_email"
             android:inputType="textEmailAddress"
             android:padding="12dp"
             android:textAlignment="textStart"
             android:drawableLeft="@drawable/user"
             android:textSize="16sp" />


         <View
             android:layout_width="wrap_content"
             android:layout_height="40dp"/>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             >

             <Button
                 android:id="@+id/submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/splash_screen_bg"
                 android:paddingVertical="20dp"
                 android:textColor="@android:color/white"
                 android:layout_gravity="fill"
                 android:visibility="visible"
                 android:text="@string/submit"
                 android:textAllCaps="false"

                 />
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_centerInParent="true"
                 android:visibility="gone"
                 android:indeterminate="true"
                 android:indeterminateTint="@color/white"/>
         </RelativeLayout>

         <View
             android:layout_width="wrap_content"
             android:layout_height="10dp"/>

     </LinearLayout>
 </ScrollView>


    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

</RelativeLayout>











