<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_screen_bg"
    android:fitsSystemWindows="true"
    tools:context=".presentation.main.MainActivity"
   >
    <!-- Logo ImageView -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="177dp"
        android:layout_height="111dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/connected_ll"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="0dp"
            android:gravity="center"
            android:background="@drawable/bg_connect"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_power_settings_new_24"/>
            </LinearLayout>



        </LinearLayout>

        <TextView
            android:id="@+id/status_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/shadow_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/connected"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>





    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:backgroundTint="@color/red"
        android:elevation="4dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="16sp"

        android:drawableStart="@drawable/logout"
        android:layout_gravity="center"
        android:drawablePadding="8dp"
        android:contentDescription="@string/logout"
        android:clickable="true"
        android:focusable="true"/>



</RelativeLayout>