<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.auth.OtpActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="?attr/actionBarWidgetTheme" >

    </com.google.android.material.appbar.MaterialToolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recoverAccount"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="16dp" />
        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_verification_sub"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:textStyle="normal" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="20dp"
            android:weightSum="6">

            <!-- OTP Field 1 -->
            <EditText
                android:id="@+id/otp_digit_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:importantForAccessibility="yes"
                android:textColor="@color/primary"

                />

            <!-- OTP Field 2 -->
            <EditText
                android:id="@+id/otp_digit_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:textColor="@color/primary"
                android:importantForAccessibility="yes" />

            <!-- OTP Field 3 -->
            <EditText
                android:id="@+id/otp_digit_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:textColor="@color/primary"
                android:importantForAccessibility="yes" />

            <!-- OTP Field 4 -->
            <EditText
                android:id="@+id/otp_digit_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:textColor="@color/primary"
                android:importantForAccessibility="yes" />

            <!-- OTP Field 5 -->
            <EditText
                android:id="@+id/otp_digit_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:textColor="@color/primary"
                android:importantForAccessibility="yes" />

            <!-- OTP Field 6 -->
            <EditText
                android:id="@+id/otp_digit_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:layout_margin="4dp"
                android:textColor="@color/primary"
                android:importantForAccessibility="yes" />
        </LinearLayout>



        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            >

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/splash_screen_bg"
                android:paddingVertical="20dp"
                android:text="@string/verify"
                android:textColor="@android:color/white"
                android:layout_gravity="fill"
                android:visibility="visible"
                android:textAllCaps="false"

                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"/>
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">
         <TextView
             android:id="@+id/routeForgot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/didNotReceiveCode"
             android:gravity="center"
             android:textStyle="normal"
             android:textColor="@color/black"
             />
         <View
             android:layout_width="4dp"
             android:layout_height="0dp" />
         <TextView
             android:id="@+id/resendAgain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/resendCode"
             android:textColor="@color/primary"
             android:gravity="center"
             android:textStyle="normal" />
     </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

</RelativeLayout>











